@@ -49,3 +49,15 @@ void free_pid_environ(struct text_object *obj);
 
 void scan_pid_environ_list_arg(struct text_object *obj, const char *arg, void* free_at_crash);
 void print_pid_environ_list(struct text_object *obj, char *p, int p_max_size);
+
+void scan_pid_exe_arg(struct text_object *obj, const char *arg, void* free_at_crash);
+void print_pid_exe(struct text_object *obj, char *p, int p_max_size);
+
+void scan_pid_stderr_arg(struct text_object *obj, const char *arg, void* free_at_crash);
+void print_pid_stderr(struct text_object *obj, char *p, int p_max_size);
+
+void scan_pid_stdin_arg(struct text_object *obj, const char *arg, void* free_at_crash);
+void print_pid_stdin(struct text_object *obj, char *p, int p_max_size);
+
+void scan_pid_stdout_arg(struct text_object *obj, const char *arg, void* free_at_crash);
+void print_pid_stdout(struct text_object *obj, char *p, int p_max_size);
