@@ -239,6 +239,10 @@ enum text_object_type {
 	OBJ_pid_cwd,
 	OBJ_pid_environ,
 	OBJ_pid_environ_list,
+	OBJ_pid_exe,
+	OBJ_pid_stderr,
+	OBJ_pid_stdin,
+	OBJ_pid_stdout,
 	OBJ_processes,
 	OBJ_running_processes,
 	OBJ_shadecolor,
