@@ -1,5 +1,7 @@
 2009-11-12
 	* Added support for $pid_environ_list
+	* Added support for $pid_exe
+	* Added support for $pid_stdin, $pid_stdout and $pid_stderr
 
 2009-11-11
 	* Added support for $pid_cmdline
